fixing padding issue on mobile dropdown

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -364,9 +364,6 @@
 	.afterLoginBtns {
 		margin-right: 10px;
 	}
-	.afterLoginBtns li {
-		margin-left: 7px;
-	}
 	.embed-container {
 		height: 0;
 		padding-bottom: 56.25%;
